# nfactorial-homeworks

./: README.md
Backend-2/cars/: pyproject.toml
HW-Backend-1/: 1-server-ping-pong.py  2-request-server-info.py  main.py  requirements.txt
HW-Backend-2/users/: pyproject.toml
HW-Backend-3/: .gitignore  requirements.txt
HW-Backend-3/cars-get-form/: cars.py  main.py
HW-Backend-4/: README.md  pyproject.toml
HW-Backend-4/app/: main.py  repository.py
HW-Backend-5/: README.md  pyproject.toml
HW-Backend-5/app/: main.py  repository.py
HW-Backend-5/tests/: test_hw5_backend.py  test_task1.py
HW-Backend-6/: README.md  requirements.txt
HW-Backend-6/app/: auth.py  main.py  utils.py
HW-Backend-6/templates/: cart.html  signup.html
HW-Backend-6/tests/: test_cart.py  test_flowers.py  test_login.py  test_logout.py  test_profile.py  test_purchased.py  test_signup.py
HW-Backend-7/: .gitignore  README.md  requirements.txt
HW-Backend-8-SQLAlchemy-Alembic/: alembic.ini  app.db  requirements.txt
HW-Backend-9-Deploy/: .gitignore  Dockerfile  alembic.ini  requirements.txt
assignment1011/: hw.py  hw_bonus.py  test_hw.py  test_hw_bonus.py
assignment12/: hw.py  hw_bonus.py  pyvenv.cfg  test_hw.py
assignment14/: .gitignore
assignment14/poetry-project/: pyproject.toml
assignment15/: hw.py  hw_bonus.py  test_hw.py
assignment16/: hw.py  test_hw.py
assignment45/: README.md  file1.txt
assignment6/: main.py
assignment7/: hw.py  hw_bonus.py  test_hw.py
assignment8/: hw.py  hw_bonus.py
assignment9/: hw.py  hw_bonus.py  test_hw_bonus.py
(+227 files in other folders)
